classDiagram

    direction LR

    class Block {
        <<Abstract>>
    }

    class GainBlock {
        Factor : double
    }
    class AddBlock {
    }
    class SubstractBlock {
    }
    class MultiplyBlock {
    }
    class DivideBlock {
    }
    class InputDeclaration {
        DirectFeedThrough = true
    }

    Block <|-- GainBlock
    Block <|-- AddBlock
    Block <|-- SubstractBlock
    Block <|-- MultiplyBlock
    Block <|-- DivideBlock

    GainBlock *-- "1" InputDeclaration
    AddBlock *-- "2" InputDeclaration
    SubstractBlock *-- "2" InputDeclaration
    MultiplyBlock *-- "2" InputDeclaration
    DivideBlock *-- "2" InputDeclaration

    style Block fill:white
    style InputDeclaration fill:white